# modern-cpp-study-group

./: .gitignore  BlockBase.h  BlockConstant.h  BlockSum.h  CMakeLists.txt  README.md  Signal.cpp  Signal.h  main.cpp
block-diagram/: BlockBase.h  BlockConstant.h  BlockIndexCtorCounter.h  BlockMux.h  BlockSum.h  CMakeLists.txt  README.md  Signal.h  main.cpp  utils_debug.h
block-diagram/Images/: Blocks.puml  Signals.puml  main_example.puml
challenge-1-force-sensor-read/: README.md  force_torque_to_file.h  sensor-log.txt
challenge-1-force-sensor-read/grilo-attempt/: CMakeLists.txt  main.cpp
